--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         /* Header Section */
         .header {
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80') no-repeat center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('img/framing1.jpg') no-repeat center center/cover;
             height: 70vh;
             display: flex;
             flex-direction: column;
@@ -153,7 +153,8 @@
     <section class="header">
         <div class="container">
             <h1>Galder Construction</h1>
-            <p>Quality you Trust, Speed you Need</p>
+            <p><i> Quality you Trust, Speed you Need </i></p>
+             <br> 
 <p><a href="#contact-us" class="contact-btn">Contact us</a></p>
         </div>
     </section>
@@ -163,12 +164,32 @@
         <div class="container">
             <h2>Our Work</h2>
             <div class="gallery">
-                <img src="https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 1">
-                <img src="https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 2">
-                <img src="https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 3">
-                <img src="https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 4">
-                <img src="https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 5">
-                <img src="https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Project 6">
+                <img src="img/Decking+Pergola.png" alt="Decking and Pergola">
+                 <img src="img/Decking3.png" alt="Project 6">
+                <img src="img/Celling.png" alt="Project 3">
+
+                 <img src="img/PaverDeck.png" alt="Project 6">
+                <img src="img/GardenBeds.png" alt="Project 5">
+                <img src="img/BathroomRenovation.png" alt="Bathroom Renovation Before and After">
+
+                <img src="img/KitchenRenovation1.png" alt="Project 6">
+                <img src="img/Fencing+Doors.png" alt="Project 6">
+                <img src="img/BathroomRenovation2.png" alt="Project 6">
+
+                <img src="img/Decking4.png" alt="Project 6">
+                <img src="img/Framing2.png" alt="Project 6">
+                <img src="img/Decking2.png" alt="Project 4">
+
+                <img src="img/Framing3.png" alt="Project 6">
+                <img src="img/HomeEntryRamp.png" alt="Project 6">
+                <img src="img/Framing4.png" alt="Project 6">
+
+                <img src="img/Fencing1.png" alt="Project 6">
+                <img src="img/Demolitions.png" alt="Project 6">
+                <img src="img/HomeEntryStairs.png" alt="pr">
+
+
+
 
             </div>
         </div>
@@ -195,7 +216,7 @@
     
     <footer>
         <div class="container">
-            <p>© 2025 by GALDER TEAM. All Rights Reserved.</p>
+            <p>© 2025 by GALDER TEAM.<i> All Rights Reserved.</i></p>
         </div>
     </footer>
 </body>
