--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         QUALITY YOU TRUST • SPEED YOU NEED
     </p>
     
-    <u style="color: #222;"><a href="#contact-us" style="font-family: 'Montserrat', sans-serif; font-weight: 700; font-size: 1rem; letter-spacing: 1px; text-transform: uppercase; background: linear-gradient(to right, #d4af37, #c9a227); color: #222; padding: 12px 30px; border-radius: 4px; text-decoration: none; border: 2px solid rgba(212,175,55,0.3); box-shadow: 0 4px 8px rgba(0,0,0,0.2), 0 0 15px rgba(212,175,55,0.3); transition: all 0.3s ease;">
+    <u style="color: #222;"><a href="#GalderConstruction" style="font-family: 'Montserrat', sans-serif; font-weight: 700; font-size: 1rem; letter-spacing: 1px; text-transform: uppercase; background: linear-gradient(to right, #d4af37, #c9a227); color: #222; padding: 12px 30px; border-radius: 4px; text-decoration: none; border: 2px solid rgba(212,175,55,0.3); box-shadow: 0 4px 8px rgba(0,0,0,0.2), 0 0 15px rgba(212,175,55,0.3); transition: all 0.3s ease;">
         CONTACT US
     </a></u>
 </div>
@@ -212,7 +212,7 @@
     <!-- Contact Us Section -->
     <section class="contact">
         <div class="container">
-<h2 id="contact-us">Contact Us</h2>
+<h2 id="GalderConstruction">Contact Us</h2>
             <div class="contact-info">
                 <div class="contact-item">
                     <i class="fas fa-phone"></i>
